[tool.poetry]
name = "spotils"
version = "0.1.0"
description = "A few utilities for providing a smoother Spotify experience."
authors = ["Qwerty-133 <74311372+Qwerty-133@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/Qwerty-133/spotils"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Flake8",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Typing :: Typed",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
spotipy = "^2.21.0"
python-dotenv = "^0.21.0"
rich = "^12.6.0"
python-dateutil = "^2.8.2"
mergedeep = "^1.3.4"
schedule = "^1.1.0"
arrow = "^1.2.3"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

black = "^22.10.0"
flake8-annotations = "^2.9.1"
pep8-naming = "^0.13.2"
flake8-isort = "^5.0.0"
flake8-todo = "^0.7"
flake8-tidy-imports = "^4.8.0"
flake8-string-format = "^0.3.0"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.9.23"
taskipy = "^1.10.3"

[tool.poetry.scripts]
spotils = "spotils.cli:app"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
install-precommit = "pre-commit install"

[tool.isort]
order_by_type = false
case_sensitive = true
combine_as_imports = true
atomic = true

multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
